Implement search service

--- a/search-api/Dockerfile
+++ b/search-api/Dockerfile
@@ -2,14 +2,14 @@
 FROM golang:1.12-alpine as build_base
 
 # Install some dependencies needed to build the project
-RUN apk add bash ca-certificates git gcc g++ libc-dev
-RUN adduser --disabled-password --gecos '' api
-USER api
+RUN apk add --update --no-cache bash ca-certificates git gcc g++ libc-dev
+# RUN adduser --disabled-password --gecos '' api
+# USER api
 
-WORKDIR /go/src/app
+WORKDIR /app
 
 # Force the go compier to use modules
-ENV GO111MODULES=on
+# ENV GO111MODULES=on
 
 # We want to populate the module cache based on the go.{mod,sum} files.
 COPY go.mod .
@@ -23,16 +23,15 @@ COPY go.sum .
 RUN go mod download
 
 # This image builds the weavaite server
-FROM build_base AS server_builder
+# FROM build_base AS server_builder
 # Here we copy the rest of the source code
 COPY . .
 # And compile the project
-RUN CGO_ENABLED=1 GOOS=linux GOARCH=amd64 go install -a -tags netgo -ldflags '-w -extldflags "-static"' ./...
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -installsuffix cgo -o /go/bin/app
  
 #In this last stage, we start from a fresh Alpine image, to reduce the image size and not ship the Go compiler in our production artifacts.
-FROM alpine AS weaviate
-# We add the certificates to be able to verify remote weaviate instances
-RUN apk add ca-certificates
+FROM scratch
+
 # Finally we copy the statically compiled Go binary.
-COPY --from=server_builder /go/src/app .
-ENTRYPOINT ["/app"]
+COPY --from=build_base /go/bin/app /go/bin/app
+ENTRYPOINT ["/go/bin/app"]
